--- a/GeneOntology.ipynb
+++ b/GeneOntology.ipynb
@@ -74,6 +74,27 @@
     "\n",
     "The easiest way to represent data like this (not just GO). Make a dictionary which has GO ids as keys, and named tuples as values. Try (Ville exercise)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GOTerm(id='1', name='dsjhdh', namespace='dhdhd', definition='hgfjskhgfk')\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"name: mitochondrion inheritance: weak\".split(\": \",1)\n",
+    "d={\"id\":\"1\",\"name\":\"dsjhdh\",\"namespace\":\"dhdhd\",\"definition\":\"hgfjskhgfk\"}\n",
+    "print GOTerm(**d)"
+   ]
   }
  ],
  "metadata": {
