--- a/Regular expressions.ipynb
+++ b/Regular expressions.ipynb
@@ -143,6 +143,41 @@
     "print re.sub(\"[^ACGT]\",\"?\",\"ACGTYHBCGT\") #Replace all characters which are not A,C,G,T with ?\n",
     "print re.sub(\"[^ACGT]\",\"\",\"ACGTYHBCGT\") #Remove all characters which are not A,C,G,T\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rexp=r\"jobid: (\\S+)\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
