--- a/GeneOntology.ipynb
+++ b/GeneOntology.ipynb
@@ -95,6 +95,59 @@
     "d={\"id\":\"1\",\"name\":\"dsjhdh\",\"namespace\":\"dhdhd\",\"definition\":\"hgfjskhgfk\"}\n",
     "print GOTerm(**d)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hjgfdskahg\n",
+      "\n",
+      "hfsjg\n",
+      "\n",
+      "hojfdsl\n",
+      "\n",
+      "hgjfds\n",
+      "0\n",
+      "6\n",
+      "6\n",
+      "6\n",
+      "6\n",
+      "6\n",
+      "6\n",
+      "8\n",
+      "8\n",
+      "9\n",
+      "count: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import StringIO\n",
+    "f=StringIO.StringIO(\"hjgfdskahg\\nhfsjg\\nhojfdsl\\nhgjfds\")\n",
+    "for line in f:\n",
+    "    print line\n",
+    "\n",
+    "\n",
+    "\n",
+    "l=list(\"abcdefabaac\")\n",
+    "\n",
+    "for i in range(len(l)):\n",
+    "    try:\n",
+    "        print l[i:].index('a')+i\n",
+    "    except:\n",
+    "        pass\n",
+    "\n",
+    "l=[\"acgt\",\"acgt\",\"jjjj\"]\n",
+    "print \"count:\",l.count(\"acgt\")\n",
+    "str(r.seq)"
+   ]
   }
  ],
  "metadata": {
