--- a/BioPython_Essentials.ipynb
+++ b/BioPython_Essentials.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "## Installation on your own computers\n",
     "\n",
-    "* We work with the 2.7 version of Python. Make sure you have that, and not Python 3.\n",
+    "* We work with the 2.7 version of Python (this one last time). Make sure you have that, and not Python 3.\n",
     "* Follow the instructions on the BioPython project page (google)\n",
     "* On a Ubuntu-flavor linux all you need is `pip install biopython`\n",
     "* Biopython is also installed in Ville\n",
