--- a/week-2-entrez.ipynb
+++ b/week-2-entrez.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Sequence record objects\n",
+    "# Sequence records, part 1\n",
     "\n",
     "## Instructions\n",
     "\n",
