clarify exercise 3.5 to use sequence list in exercise 3.3

--- a/question/week-3-exercises.ipynb
+++ b/question/week-3-exercises.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -90,7 +90,7 @@
    "source": [
     "#### Exercise 3.5 SignalP and TMHMM services\n",
     "\n",
-    "Run the sequences from the previous exercise through the [SignalP](http://www.cbs.dtu.dk/services/SignalP/) and [TMHMM](http://www.cbs.dtu.dk/services/TMHMM/) services (preferrably programmatically, but please don't crash those services). For each sequence, collect the ID and the predictions from these two services into a nicely-structured dictionary.\n"
+    "Run the sequences from the previous exercise (exercise 3.3) through the [SignalP](http://www.cbs.dtu.dk/services/SignalP/) and [TMHMM](http://www.cbs.dtu.dk/services/TMHMM/) services (preferrably programmatically, but please don't crash those services). For each sequence, collect the ID and the predictions from these two services into a nicely-structured dictionary.\n"
    ]
   },
   {
