updated week 5 lecture notes

--- a/week-5-alignment-algorithms.ipynb
+++ b/week-5-alignment-algorithms.ipynb
@@ -29,7 +29,8 @@
     "    \"\"\"\n",
     "    Return Hamming distance between x and y \n",
     "    \"\"\"\n",
-    "    assert len(x) == len(y) # check if the lenght of sequence equal\n",
+    "    if not len(x) == len(y): # check if the lengths are not equal\n",
+    "        return None # distance not defined\n",
     "    nmm = 0\n",
     "    for i in range(0, len(x)):\n",
     "        if x[i] != y[i]:\n",
@@ -39,6 +40,45 @@
     "print(hammingDistance('GCGTATGCACGC', 'GCTATGCCACGC'))\n",
     "\n",
     "print(hammingDistance('GCGTATGCACGC', 'GCTATGCCACG'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sometimes it is useful to obtain all occurrences of $p$ within a longer sequence $p$ such that the Hamming distance is not longer than $m$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def naive_approx_hamming(p, t, m):\n",
+    "    # keep track of (position, distance) pairs\n",
+    "    occurrences = []\n",
+    "    # start from each (viable) position in t\n",
+    "    for i in range(0, len(t) - len(p) + 1):\n",
+    "        # calculate hamming distance (see above)\n",
+    "        nmm = 0\n",
+    "        for j in range(0, len(p)):\n",
+    "            if t[i+j] != p[j]:\n",
+    "                nmm += 1\n",
+    "                # stop prematurately if maximum distance is exceeded\n",
+    "                if nmm > m:\n",
+    "                    break\n",
+    "        # record matches as (position, distance) pairs\n",
+    "        if nmm <= m:\n",
+    "            occurrences.append((i,nmm))\n",
+    "    return occurrences\n",
+    "\n",
+    "p = 'GCGA'\n",
+    "t = 'GCTATGCCACGC'\n",
+    "for pos,distance in naive_approx_hamming(p, t, 2):\n",
+    "    print(distance)\n",
+    "    print(p)\n",
+    "    print(t[pos:pos+len(p)])"
    ]
   },
   {
@@ -66,54 +106,16 @@
     "    if len(y) == 0: \n",
     "        return len(x), len(x)\n",
     "    diff = abs(len(x) - len(y)) \n",
-    "    lower = diff # the difference is at most the differences of the lengths of sequences \n",
+    "    lower = diff # the difference is at least the difference of the lengths of sequences \n",
     "    if lower == 0 and x != y: # if the sequences are different but the same length then the mininum difference is 1\n",
     "        lower = 1\n",
     "    minlen = min(len(x), len(y))\n",
     "    upper = hammingDistance(x[:minlen], y[:minlen]) + diff # check with hamming edit distance only with the common lengths\n",
+    "    # the upper bound may become smaller by assigning the gaps differently (now they are all at the end, basically)\n",
+    "    # finding the optimal positions of gaps will result in the exact edit distance\n",
     "    return lower, upper\n",
     "\n",
     "boundEditDistance('GCGTATGCACGC', 'GCTATGCCACGC')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Just small modification to specify maximum distance allowed between sequences and print the different similar to BLAST."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Like the naive algorithm but we break out of the inner loop as soon as our\n",
-    "# mismatch budget exceeds the maximum allowed Hamming distance.\n",
-    "def naive_approx_hamming(p, t, maxHammingDistance):\n",
-    "    occurrences = []\n",
-    "    for i in range(0, len(t) - len(p) + 1): # for all alignments\n",
-    "        nmm = 0\n",
-    "        for j in range(0, len(p)):          # for all characters\n",
-    "            if t[i+j] != p[j]:    # does it match?\n",
-    "                nmm += 1                     # mismatch\n",
-    "                if nmm > maxHammingDistance:\n",
-    "                    break                    # exceeded maximum distance\n",
-    "                else:\n",
-    "                    occurrences.append(' ')\n",
-    "            else:\n",
-    "                occurrences.append('|')\n",
-    "        if nmm <= maxHammingDistance: # print matching in BLAST alignment style\n",
-    "            print('hamming distance =', nmm)\n",
-    "            print(t.strip()+'-' if t[-1] == ' ' else t+'')\n",
-    "            print(''.join(occurrences))\n",
-    "            print(p.strip()+'-' if p[-1] == ' ' else p+'')\n",
-    "    return nmm\n",
-    "\n",
-    "hamming_dist = naive_approx_hamming('GCGTATGCACGC', 'GCTATGCCACGC', 10)\n",
-    "\n",
-    "hamming_dist = naive_approx_hamming('GCGTATGCACGC', 'GCTATGCCACG ', 10)"
    ]
   },
   {
@@ -277,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
