update the extrac materials to work with Python3

--- a/BioPython_Essentials.ipynb
+++ b/BioPython_Essentials.ipynb
@@ -10,32 +10,22 @@
     "\n",
     "## Installation on your own computers\n",
     "\n",
-    "* We work with the 2.7 version of Python (this one last time). Make sure you have that, and not Python 3.\n",
+    "* We work with the 3.5, 3.6, 3.7 version of Python. Make sure you have that, and not Python 2.\n",
     "* Follow the instructions on the BioPython project page (google)\n",
-    "* On a Ubuntu-flavor linux all you need is `pip install biopython`\n",
+    "* On a Ubuntu-flavor linux all you need is `pip3 install biopython`\n",
     "* Biopython is also installed in Ville\n",
     "\n",
-    "Let's check all works - the latest version of BioPython is `1.66` maybe you see a different one on your machine:"
+    "Let's check all works - the latest version of BioPython is `1.73` maybe you see a different one on your machine:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.66\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import Bio\n",
-    "print Bio.__version__ #This is two underscores not one"
+    "print(Bio.__version__) #This is two underscores not one"
    ]
   },
   {
@@ -50,23 +40,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.5+"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
