--- a/question/week-5-exercises.ipynb
+++ b/question/week-5-exercises.ipynb
@@ -11,9 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "['TTT']\n",
+      "atc\n",
+      "atc\n"
+     ]
+    }
+   ],
    "source": [
     "# for example\n",
     "\n",
@@ -30,7 +41,26 @@
     "    \"\"\"\n",
     "    \"\"\"\n",
     "\n",
-    "print(ngram2i('TTAGTTGT'))\n"
+    "print(ngram2i('TTAGTTGT'))\n",
+    "\n",
+    "\n",
+    "\n",
+    "for i1 in 'ACGT':\n",
+    "    for i2 in 'ACGT':\n",
+    "        for i3 in 'ACGT':\n",
+    "            l = []\n",
+    " #           print(i1,i2,i3)\n",
+    "            my_new_list = [i1,i2,i3]\n",
+    "    \n",
+    "            l.append(''.join(my_new_list))\n",
+    "print(l)\n",
+    "    \n",
+    "f = ''\n",
+    "d = ['a', 't', 'c']\n",
+    "for item in d:\n",
+    "    f += item\n",
+    "print(f)\n",
+    "print(''.join(['a','t','c']))"
    ]
   },
   {
@@ -209,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
