--- a/week-5-alignment-algorithms.ipynb
+++ b/week-5-alignment-algorithms.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### This lecture notes have been copied and edited from \n",
+    "#### This lecture note have been copied and edited from \n",
     "#### http://www.langmead-lab.org/teaching-materials/ "
    ]
   },
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So we can modify the Hamming edit distance to allow two strings/sequences of unequal length for calculation. By aligning the sequence to be compared from the first position, and different lengths are then added to distance. Missing the items to compared from shorter sequence is considered mismatch. "
+    "So we can modify the Hamming edit distance to allow two strings/sequences of unequal length for calculation. By aligning the sequence to be compared from the first position, and different lengths are then added to distance. Missing item to compare from shorter sequence is considered mismatch. "
    ]
   },
   {
@@ -279,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
