--- a/Sorting.ipynb
+++ b/Sorting.ipynb
@@ -11,27 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 1, 4, 6, 7] [1, 3, 4, 6, 7]\n",
-      "[1, 3, 4, 6, 7]\n",
-      "hi\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "l1=[3,1,4,6,7]\n",
     "l2=sorted(l1)\n",
-    "print l1,l2 #l2 is a different list from l1\n",
+    "print(l1,l2) #l2 is a different list from l1\n",
     "l1.sort() #now l1 is sorted in-place\n",
-    "print l1"
+    "print(l1)"
    ]
   },
   {
@@ -45,21 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[7, 6, 4, 3, 1]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "print sorted(l1,reverse=True)"
+    "print(sorted(l1,reverse=True))"
    ]
   },
   {
@@ -73,30 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Default sort order: ['aaaaaaaaaaaaaaaaaa', 'sjsjsj', 'zzz']\n",
-      "New sort order by length: ['zzz', 'sjsjsj', 'aaaaaaaaaaaaaaaaaa']\n",
-      "New sort order by length (lambda): ['zzz', 'sjsjsj', 'aaaaaaaaaaaaaaaaaa']\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def lenk(s):\n",
     "    \"\"\"This function simply returns the length of s\"\"\"\n",
     "    return len(s)\n",
     "\n",
     "l=[\"sjsjsj\",\"zzz\",\"aaaaaaaaaaaaaaaaaa\"]\n",
-    "print \"Default sort order:\", sorted(l)\n",
-    "print \"New sort order by length:\", sorted(l,key=lenk) #Note: not lenk(), just lenk\n",
-    "print \"New sort order by length (lambda):\", sorted(l,key=lambda s: len(s)) #Same but with lambda functions"
+    "print(\"Default sort order:\", sorted(l))\n",
+    "print(\"New sort order by length:\", sorted(l,key=lenk)) #Note: not lenk(), just lenk\n",
+    "print(\"New sort order by length (lambda):\", sorted(l,key=lambda s: len(s))) #Same but with lambda functions"
    ]
   },
   {
@@ -108,23 +74,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Items: [('A', 15), ('C', 12), ('T', 12), ('G', 13)]\n",
-      "A 15\n",
-      "G 13\n",
-      "T 12\n",
-      "C 12\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "s=\"ACGTTGGCCAGATCGACTATGGCAGATTGACTAGCATACGATCGCATCAGAT\"\n",
     "counter={}\n",
@@ -137,11 +89,11 @@
     "    \"\"\"Gets one key-value pair from the dictionary and returns the value, and then the key\"\"\"\n",
     "    return key_value[1], key_value[0] #the value is the first thing we sort on, the letter the second\n",
     "\n",
-    "items=counter.items() #all items from the dictionary as a list of (key,value) pairs\n",
-    "print \"Items:\", items\n",
+    "items=list(counter.items()) #all items from the dictionary as a list of (key,value) pairs\n",
+    "print(\"Items:\", items)\n",
     "items.sort(reverse=True, key=get_val)\n",
     "for letter,count in items:\n",
-    "    print letter, count\n"
+    "    print(letter, count)\n"
    ]
   },
   {
@@ -154,23 +106,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.5+"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
