create output of extra materials and remove unused codes in exercise

--- a/Sets and exceptions.ipynb
+++ b/Sets and exceptions.ipynb
@@ -11,9 +11,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s1 {1, 2, 3, 4, 5}\n",
+      "s2 {4, 5, 6, 7}\n",
+      "s1&s2 {4, 5}\n",
+      "s1-s2 {1, 2, 3}\n",
+      "s1|s2 {1, 2, 3, 4, 5, 6, 7}\n",
+      "s1 before union update {1, 2, 3, 4, 5}\n",
+      "s1 after union update {1, 2, 3, 4, 5, 6, 7}\n"
+     ]
+    }
+   ],
    "source": [
     "s=set() #this is how you create a set\n",
     "\n",
@@ -47,9 +61,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "11",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-959f649fdfce>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m11\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 11"
+     ]
+    }
+   ],
    "source": [
     "s1.remove(11)"
    ]
@@ -65,9 +91,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error. Happened. I'm inside except!\n",
+      "woohoo made it to the end\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-3-ae4fca87159b>\", line 5, in <module>\n",
+      "    s1.remove(11)\n",
+      "KeyError: 11\n"
+     ]
+    }
+   ],
    "source": [
     "import traceback  #needed if we want to print the error\n",
     "\n",
@@ -83,6 +128,13 @@
     "print(\"woohoo made it to the end\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
