--- a/week-5-alignment-algorithms.ipynb
+++ b/week-5-alignment-algorithms.ipynb
@@ -21,9 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "def hammingDistance(x, y):\n",
     "    \"\"\"\n",
@@ -51,9 +60,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "GCGA\n",
+      "GCTA\n",
+      "1\n",
+      "GCGA\n",
+      "GCCA\n",
+      "2\n",
+      "GCGA\n",
+      "ACGC\n"
+     ]
+    }
+   ],
    "source": [
     "def naive_approx_hamming(p, t, m):\n",
     "    # keep track of (position, distance) pairs\n",
@@ -90,9 +115,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 5)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def boundEditDistance(x, y):\n",
     "    \"\"\"\n",
@@ -129,9 +165,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "with equal lenght of sequences\n",
+      "distance between sequence x and y = 2\n",
+      "[[ 0  1  2  3  4  5  6  7  8  9 10 11 12]\n",
+      " [ 1  0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      " [ 2  1  0  1  2  3  4  5  6  7  8  9 10]\n",
+      " [ 3  2  1  1  2  3  3  4  5  6  7  8  9]\n",
+      " [ 4  3  2  1  2  2  3  4  5  6  7  8  9]\n",
+      " [ 5  4  3  2  1  2  3  4  5  5  6  7  8]\n",
+      " [ 6  5  4  3  2  1  2  3  4  5  6  7  8]\n",
+      " [ 7  6  5  4  3  2  1  2  3  4  5  6  7]\n",
+      " [ 8  7  6  5  4  3  2  1  2  3  4  5  6]\n",
+      " [ 9  8  7  6  5  4  3  2  2  2  3  4  5]\n",
+      " [10  9  8  7  6  5  4  3  2  3  2  3  4]\n",
+      " [11 10  9  8  7  6  5  4  3  3  3  2  3]\n",
+      " [12 11 10  9  8  7  6  5  4  4  3  3  2]]\n",
+      "\n",
+      "with different lengths of sequences\n",
+      "distance between sequence x and y = 3\n",
+      "[[ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      " [ 1  0  1  2  3  4  5  6  7  8  9 10]\n",
+      " [ 2  1  0  1  2  3  4  5  6  7  8  9]\n",
+      " [ 3  2  1  1  2  3  3  4  5  6  7  8]\n",
+      " [ 4  3  2  1  2  2  3  4  5  6  7  8]\n",
+      " [ 5  4  3  2  1  2  3  4  5  5  6  7]\n",
+      " [ 6  5  4  3  2  1  2  3  4  5  6  7]\n",
+      " [ 7  6  5  4  3  2  1  2  3  4  5  6]\n",
+      " [ 8  7  6  5  4  3  2  1  2  3  4  5]\n",
+      " [ 9  8  7  6  5  4  3  2  2  2  3  4]\n",
+      " [10  9  8  7  6  5  4  3  2  3  2  3]\n",
+      " [11 10  9  8  7  6  5  4  3  3  3  2]\n",
+      " [12 11 10  9  8  7  6  5  4  4  3  3]]\n"
+     ]
+    }
+   ],
    "source": [
     "from numpy import zeros\n",
     "\n",
@@ -171,9 +245,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  8 16 24 32 40 48 56 64 72 80]\n",
+      " [ 8  0  8 16 24 32 40 48 56 64 72]\n",
+      " [16  8  0  8 16 24 32 40 48 56 64]\n",
+      " [24 16  8  2 10 18 24 32 40 48 56]\n",
+      " [32 24 16 10  2 10 18 26 34 40 48]\n",
+      " [40 32 24 16 10  2 10 18 26 34 42]\n",
+      " [48 40 32 24 18 10  2 10 18 26 34]\n",
+      " [56 48 40 32 26 18 10  2 10 18 26]\n",
+      " [64 56 48 40 32 26 18 10  6 10 18]\n",
+      " [72 64 56 48 40 34 26 18 12 10 10]]\n",
+      "alignment score =  10\n"
+     ]
+    }
+   ],
    "source": [
     "from numpy import zeros\n",
     "\n",
@@ -231,9 +323,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  0  0  0  0  0  2  0  2  2  0  2  0  0  0]\n",
+      " [ 0  0  0  0  0  0  2  0  2  4  0  2  0  0  0]\n",
+      " [ 0  2  0  2  0  2  0  0  0  0  0  0  4  2  2]\n",
+      " [ 0  0  4  0  4  0  0  0  0  0  0  0  0  0  0]\n",
+      " [ 0  2  0  6  0  6  0  0  0  0  0  0  2  2  2]\n",
+      " [ 0  0  0  0  2  0  8  2  2  2  0  2  0  0  0]\n",
+      " [ 0  0  0  0  0  0  2 10  4  0  4  0  0  0  0]\n",
+      " [ 0  2  0  2  0  2  0  4  6  0  0  0  2  2  2]\n",
+      " [ 0  0  0  0  0  0  4  0  6  8  2  2  0  0  0]\n",
+      " [ 0  0  0  0  0  0  2  0  2  8  4  4  0  0  0]\n",
+      " [ 0  0  0  0  0  0  0  4  0  2 10  4  0  0  0]\n",
+      " [ 0  0  0  0  0  0  2  0  6  2  4 12  6  0  0]\n",
+      " [ 0  0  0  0  0  0  0  4  0  2  4  6  8  2  0]\n",
+      " [ 0  2  0  2  0  2  0  0  0  0  0  0  8 10  4]\n",
+      " [ 0  0  4  0  4  0  0  0  0  0  0  0  2  4  6]]\n",
+      "Best score=12, in cell (12, 11)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy\n",
     "\n",
@@ -261,6 +377,13 @@
     "print(V)\n",
     "print(\"Best score=%d, in cell %s\" % (best, numpy.unravel_index(numpy.argmax(V), V.shape)))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
