--- a/Regular expressions.ipynb
+++ b/Regular expressions.ipynb
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACCT\n",
+      "ACGT\n"
+     ]
+    }
+   ],
    "source": [
     "import re #Module with regular expression functionality\n",
     "\n",
@@ -23,9 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACGT\n"
+     ]
+    }
+   ],
    "source": [
     "for match in re.findall(\"AC[GA]T\",\"TACCTACGTT\"): #Look for AC then either G or A then T\n",
     "    print(match)"
@@ -33,9 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "match always the longest and I really mean longest\n"
+     ]
+    }
+   ],
    "source": [
     "#look for \"match\" then space then as many characters as possible then space then \"longest\"\n",
     "for match in re.findall(\"match .* longest\", \"match always the longest and I really mean longest string\"):\n",
@@ -45,9 +70,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "C\n",
+      "G\n",
+      "T\n",
+      "C\n",
+      "G\n",
+      "T\n"
+     ]
+    }
+   ],
    "source": [
     "for match in re.findall(\"[ACGT]\",\"ACGTYHBCGT\"): #match a single character A, C, G, or T\n",
     "    print(match)"
@@ -55,9 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Y\n",
+      "H\n",
+      "B\n"
+     ]
+    }
+   ],
    "source": [
     "for match in re.findall(\"[^ACGT]\",\"ACGTYHBCGT\"): #match a single character which is not A, C, G, or T\n",
     "    print(match)"
@@ -65,9 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACGT???CGT\n",
+      "ACGTCGT\n"
+     ]
+    }
+   ],
    "source": [
     "print(re.sub(\"[^ACGT]\",\"?\",\"ACGTYHBCGT\")) #Replace all characters which are not A,C,G,T with ?\n",
     "print(re.sub(\"[^ACGT]\",\"\",\"ACGTYHBCGT\")) #Remove all characters which are not A,C,G,T\n"
@@ -75,12 +133,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "rexp=r\"jobid: (\\S+)\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
