--- a/Sorting.ipynb
+++ b/Sorting.ipynb
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 1, 4, 6, 7] [1, 3, 4, 6, 7]\n",
+      "[1, 3, 4, 6, 7]\n"
+     ]
+    }
+   ],
    "source": [
     "l1=[3,1,4,6,7]\n",
     "l2=sorted(l1)\n",
@@ -33,9 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7, 6, 4, 3, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "print(sorted(l1,reverse=True))"
    ]
@@ -51,9 +68,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Default sort order: ['aaaaaaaaaaaaaaaaaa', 'sjsjsj', 'zzz']\n",
+      "New sort order by length: ['zzz', 'sjsjsj', 'aaaaaaaaaaaaaaaaaa']\n",
+      "New sort order by length (lambda): ['zzz', 'sjsjsj', 'aaaaaaaaaaaaaaaaaa']\n"
+     ]
+    }
+   ],
    "source": [
     "def lenk(s):\n",
     "    \"\"\"This function simply returns the length of s\"\"\"\n",
@@ -74,9 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Items: [('A', 15), ('C', 12), ('G', 13), ('T', 12)]\n",
+      "A 15\n",
+      "G 13\n",
+      "T 12\n",
+      "C 12\n"
+     ]
+    }
+   ],
    "source": [
     "s=\"ACGTTGGCCAGATCGACTATGGCAGATTGACTAGCATACGATCGCATCAGAT\"\n",
     "counter={}\n",
@@ -102,6 +141,13 @@
    "source": [
     "Whoops. That doesn't quite do what we wanted since C should come before T. Think why that is. We want the dictionary sorted from most common to least common and in case of same-count, alphabetically. Now it's reverse-alphabetically. I'll make this into an exercise. Hint: Note the [`ord()`](https://docs.python.org/2/library/functions.html#ord) function."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
