--- a/lectures/week-2-entrez.ipynb
+++ b/lectures/week-2-entrez.ipynb
@@ -808,6 +808,8 @@
     "                        rettype=\"uilist\",\n",
     "                        retmode=\"xml\")\n",
     "    results = BE.read(handle)\n",
+    "    webenv = results['WebEnv']\n",
+    "    querykey = results['QueryKey']\n",
     "    # adjust maximum size if less than maximum number of hits available\n",
     "    retrieve_size = min(int(results['Count']), retrieve_size)\n",
     "    # split results into batches\n",
