fixed an error in text

--- a/lectures/week-2-entrez.ipynb
+++ b/lectures/week-2-entrez.ipynb
@@ -542,7 +542,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `parse` function in `Bio.Entrez` can parse the output of EUtils tools into a dictionary. It expects input that contains exactly one record.\n",
+    "The `read` function in `Bio.Entrez` can parse the output of EUtils tools into a dictionary. It expects input that contains exactly one record.\n",
     "\n",
     "In this case, the output is the query result that contains the retrieved IDs (and some other information)."
    ]
