minor updates to tasks 3 and 4

--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -74,9 +74,9 @@
     "\n",
     "Infer the putative functions by similarity.\n",
     "\n",
-    "a) For each target protein sequence in the task 1, download the UniProt entries of the selected hits in the task 2. Save the entries to the files `XXXXXX.xml` where `XXXXXX` is the UniProt id.\n",
+    "a) Download the UniProt entries of the selected hits in the task 2. Save the entries to the files `XXXXXX.xml` where `XXXXXX` is the UniProt id.\n",
     "\n",
-    "b) Find all Gene Ontology (GO) terms which occur in the UniProt entries.\n",
+    "b) Separately for each target protein sequence in the task 1, find those Gene Ontology (GO) terms which occur in all of the matched UniProt entries.\n",
     "\n",
     "c) Update the records of the target protein sequences by adding the found GO terms. Use a sequence feature with the type `GO` and the qualifier key `db_xref` containing a list of ids. Also add the qualifier `evidence` with value `inferred by similarity` to the feature. Save the updated records to the file `3-proteins.gb`.\n",
     "\n",
@@ -98,7 +98,7 @@
     "\n",
     "Find the positions at which the sequences differ from consensus.\n",
     "\n",
-    "a) For each target protein sequence in the task 1, align the target sequence with the sequences of the UniProt entries in the task 3. Save the alignments to the file `3-alignment-X.aln` in the Clustal format where `X` is a running number.\n",
+    "a) For each target protein sequence in the task 1, align the target sequence with the sequences of the UniProt entries in the task 3. Save the alignments to the file `3-alignment-X.fasta` in the FASTA format where `X` is a running number.\n",
     "\n",
     "b) Find the positions in the alignments at which the target sequence is not identical to the consensus. Use 60% consensus (i.e. the consensus exists if at least 60% of the aligned sequences contain the same residue). Ignore the non-consensus positions and the gaps in either sequence.\n",
     "\n",
