clarification to task 1

--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "Extract the coding sequences from the mRNA sequences.\n",
     "\n",
-    "a) For each target mRNA sequence, find the longest open reading frame (ORF) in the sequence. An open reading frame is a continuous sequence that has the start codon `ATG` in the beginning and a stop codon at the end. Remember that the start codon can be at any position in the sequence.\n",
+    "a) For each target mRNA sequence, find the longest open reading frame (ORF) in the sequence. An open reading frame is a continuous sequence that has the start codon `ATG` in the beginning and a stop codon at the end. There are no stop codons in the middle of an ORF. Remember that the start codon can be at any position in the sequence.\n",
     "\n",
     "b) Translate the ORFs to protein sequences for further analysis.\n",
     "\n",
