--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "The project is divided into four tasks which form a series of analyses. In each task, you will be asked to save the output data to a file and summarise your discoveries. The expected outputs of the tasks 1 and 2 will be given as additional files so that you can attempt any of the tasks even if you fail to solve some of them.\n",
     "\n",
-    "To pass the project, you must submit a Jupyter notebook file that contains the report and the code of your analysis. The analysis must be mostly correct. That is, a few errors are allowed but the selected approach and the majority of the results must be correct. Explain your approach and results in your report and include comments to your code to clarify your implementation. You may be asked to revise your submission if it is not acceptable.\n",
+    "To pass the project, you must submit a Jupyter notebook file that contains the report and the code of your analysis. Your submission must demonstrate that you understand how to analyse the data to reach the objectives and how implement the analysis. Some errors are allowed as long as your approach is correct. Explain your approach and results in your report and include comments to your code to clarify your implementation. You may be asked to revise your submission if it is not acceptable.\n",
     "\n",
     "There are also extra tasks. Successfully completing these tasks will earn you extra points in the exam."
    ]
